# sicherungskopie_robot

./: .config.yaml  .gitignore  Dockerfile  README.md  duplicity_local.sh  duplicity_remote.sh  pyproject.toml
src/: config.py  duplicity_backblaze.sh  icon_try_indicator.py  main.py
src/modules/: icon_try_indicator.py
src/sicherungskopie_robot/: config.py  main.py
src/sicherungskopie_robot/tasks/: backup.py  ls.py
