[tool.poetry]
name = "sicherungskopie_robot"
version = "0.1.0"
description = "Automated duplicity backups"
authors = ["Jose Manuel S <subliminal@ciencias.unam.mx>"]

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]
argconfig = "^0.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
