[tool.poetry]
name = "sicherungskopie_robot"
version = "0.1.0"
description = "Automated duplicity backups"
authors = ["Jose Manuel S <subliminal@ciencias.unam.mx>"]
packages = [
    { include = "sicherungskopie_robot", from = "src" },
]

[tool.poetry.scripts]
sicherungskopie_robot-main = "sicherungskopie_robot.main:main"

[tool.poetry.dependencies]
python = "^3.8"
typing = "^3.7.4"
configargparse = "^1.3"

[tool.poetry.dev-dependencies]
argconfig = "^0.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
