[tool.poetry]
name = "sicherungskopie_robot"
version = "0.1.0"
description = "Automated duplicity backups"
authors = ["Jose Manuel S <s5po@gmx.com>"]
packages = [
    { include = "sicherungskopie_robot", from = "src" },
]

[tool.poetry.scripts]
sicherungskopie_robot-main = "sicherungskopie_robot.main:main"

[tool.poetry.dependencies]
python = "^3.9"
configargparse = "^1.3"
python-dotenv = "^0.15.0"
urllib3 = "^1.26.3"
b2sdk = "^1.14.1"

[tool.poetry.dev-dependencies]
argconfig = "^0.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
